--- a/StonksCasino/StonksCasino/MainWindow.xaml
+++ b/StonksCasino/StonksCasino/MainWindow.xaml
@@ -49,7 +49,7 @@
             </StackPanel>
             <StackPanel Grid.Row="3" Grid.Column="1">
             <TextBlock Text="Wachtwoord" Foreground="White" Margin="0,10" FontSize="30"></TextBlock>
-                <PasswordBox PasswordChar="*" FontSize="30" Foreground="Black" Background="White" PasswordChanged="PasswordBox_PasswordChanged" />
+                <PasswordBox x:Name="Password" PasswordChar="*" FontSize="30" Foreground="Black" Background="White"  />
             </StackPanel>
             <StackPanel Grid.Row="4" Grid.Column="1" Orientation="Horizontal"  VerticalAlignment="Center">
                 <TextBlock Margin="0,0,15,0" TextDecorations="Underline" Foreground="White" FontSize="22" Text="Account registreren"/>
