--- a/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
@@ -40,6 +40,38 @@
                     <RowDefinition Height="10*"></RowDefinition>
                     <RowDefinition Height="1*"></RowDefinition>
                 </Grid.RowDefinitions>
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="10"></ColumnDefinition>
+                        <ColumnDefinition Width="10"></ColumnDefinition>
+                        <ColumnDefinition Width="1*"></ColumnDefinition>
+                        <ColumnDefinition Width="10"></ColumnDefinition>
+                        <ColumnDefinition Width="1*"></ColumnDefinition>
+                        <ColumnDefinition Width="10"></ColumnDefinition>
+                        <ColumnDefinition Width="1*"></ColumnDefinition>
+                        <ColumnDefinition Width="10"></ColumnDefinition>
+                        <ColumnDefinition Width="1*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="10"></RowDefinition>
+                        <RowDefinition Height="1*"></RowDefinition>
+                        <RowDefinition Height="10"></RowDefinition>
+                        <RowDefinition Height="1*"></RowDefinition>
+                        <RowDefinition Height="10"></RowDefinition>
+                        <RowDefinition Height="1*"></RowDefinition>
+                        <RowDefinition Height="10"></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <TextBlock Background="Black" Grid.ColumnSpan="7" Grid.Column="1"></TextBlock>
+                    <TextBlock Background="Black" Grid.ColumnSpan="7" Grid.Row="7" Grid.Column="1"></TextBlock>
+                    <TextBlock Background="Black" Grid.RowSpan="7" Grid.Column="1"></TextBlock>
+                    <TextBlock Background="Black" Grid.RowSpan="7" Grid.Column="7"></TextBlock>
+
+                    <TextBlock Background="Black" Grid.Column="3" Grid.RowSpan="6"></TextBlock>
+                    <TextBlock Background="Black" Grid.Column="5" Grid.RowSpan="6"></TextBlock>
+
+                    <TextBlock Background="Black" Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="6"></TextBlock>
+                    <TextBlock Background="Black" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="6"></TextBlock>
+                </Grid>
                 <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="10"></ColumnDefinition>
