--- a/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
@@ -10,6 +10,8 @@
         >
     <!--Height="600" MinHeight="600" Width="800" MinWidth="800"-->
     <Grid>
+        
+        <!--TEST-->
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
             <RowDefinition />
