--- a/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
@@ -88,16 +88,17 @@
                             </Style>
                         </Button.Resources>
                     </Button>
-                    <Button Click="Verhogen_Click" Background="Black" Grid.Column="1" Grid.Row="1" Height="60px" Foreground="White">
+                    <Button x:Name="btVerhogen" Click="Verhogen_Click" Background="Black" Grid.Column="1" Grid.Row="1" Height="60px" Foreground="White">
                         <TextBlock TextAlignment="Center">Beurten verhogen<LineBreak/>- 100 fiches</TextBlock>
                     </Button>
-                    <Button Click="Verlagen_Click" Background="Black" Grid.Column="1" Grid.Row="2" Height="60px" Foreground="White">
-                        <TextBlock TextAlignment="Center">Beurten verhogen<LineBreak/>+ 100 fiches</TextBlock>
+                    <Button x:Name="btVerlagen" Click="Verlagen_Click" Background="Black" Grid.Column="1" Grid.Row="2" Height="60px" Foreground="White">
+                        <TextBlock TextAlignment="Center">Beurten verlagen<LineBreak/>+ 100 fiches</TextBlock>
                     </Button>
                     <Grid Grid.Row="3" Grid.Column="1" Background="Black">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"></RowDefinition>
-                            <RowDefinition Height="1*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
+                            <RowDefinition Height="*"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
                         </Grid.RowDefinitions>
                         <TextBlock TextAlignment="Center" Grid.Column="1" Grid.Row="1" Foreground="White">Aantal Beurten:</TextBlock>
