--- a/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/poker/PokerWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="PokerWindow" Height="600" MinHeight="600" Width="800" MinWidth="800"
         WindowState="Maximized" Closing="Window_Closing"
+        SizeChanged="Window_SizeChanged"
         >
     <Grid>
         <Grid.RowDefinitions>
@@ -57,7 +58,7 @@
                     </Grid.ColumnDefinitions>
 
 
-                    <Image x:Name="one"  Margin="10,0" Grid.Column="0" Grid.Row="1" Source="{Binding Game.MyTable[0].ActiveURL, Mode=OneWay}" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+                    <Image x:Name="one" Margin="10,0" Grid.Column="0" Grid.Row="1" Source="{Binding Game.MyTable[0].ActiveURL, Mode=OneWay}" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <TranslateTransform X="2000" Y="-2000"/>
@@ -110,14 +111,14 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1.5*"/>
                     </Grid.ColumnDefinitions>
-                    <Image x:Name="player0_Left" Margin="0,0,10,0" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Source="{Binding Game.Players[0].Hand[0].ActiveURL}">
+                    <Image x:Name="player0_Left" Width="{Binding CardWidth, Mode=OneWay}" Margin="0,0,10,0" Grid.Column="1" Grid.Row="1" HorizontalAlignment="Right" Source="{Binding Game.Players[0].Hand[0].ActiveURL}">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <TranslateTransform Y="1000"/>
                             </TransformGroup>
                         </Image.RenderTransform>
                     </Image>
-                    <Image x:Name="player0_Right" Margin="10,0,0,0" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" Source="{Binding Game.Players[0].Hand[1].ActiveURL}">
+                    <Image x:Name="player0_Right" Width="{Binding CardWidth, Mode=OneWay}" Margin="10,0,0,0" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Left" Source="{Binding Game.Players[0].Hand[1].ActiveURL}">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <TranslateTransform Y="1000"/>
@@ -150,7 +151,7 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="1.5*"/>
                     </Grid.ColumnDefinitions>
-                    <Image x:Name="player2_Left" Margin="0,0,10,0" Grid.Column="1" HorizontalAlignment="Right" Source="{Binding Game.Players[2].Hand[1].ActiveURL}" RenderTransformOrigin="0.5,0.5">
+                    <Image x:Name="player2_Left" Width="{Binding CardWidth, Mode=OneWay}" Margin="0,0,10,0" Grid.Column="1" HorizontalAlignment="Right" Source="{Binding Game.Players[2].Hand[1].ActiveURL}" RenderTransformOrigin="0.5,0.5">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform ScaleY="1"/>
@@ -158,7 +159,7 @@
                             </TransformGroup>
                         </Image.RenderTransform>
                     </Image>
-                    <Image x:Name="player2_Right" Margin="10,0,0,0" Grid.Column="2" HorizontalAlignment="Left" Source="{Binding Game.Players[2].Hand[0].ActiveURL}" RenderTransformOrigin="0.5,0.5">
+                    <Image x:Name="player2_Right" Width="{Binding CardWidth, Mode=OneWay}" Margin="10,0,0,0" Grid.Column="2" HorizontalAlignment="Left" Source="{Binding Game.Players[2].Hand[0].ActiveURL}" RenderTransformOrigin="0.5,0.5">
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform ScaleY="1"/>
@@ -197,33 +198,36 @@
                         <ColumnDefinition Width="1.5*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Image x:Name="player1_Left" Margin="0,0,0,10" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[1].Hand[0].ActiveURL}" RenderTransformOrigin="0.5,0.5">
+                    <TextBlock Text="{Binding CardWidth, Mode=OneWay}"></TextBlock>
+                    <Image x:Name="player1_Left" Width="{Binding CardWidth, Mode=OneWay}" Margin="0,0,0,-10" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[1].Hand[0].ActiveURL}" RenderTransformOrigin="0.5,0.5">
                         <Image.LayoutTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
                                 <SkewTransform/>
-                                <RotateTransform Angle="90"/>
+                                <RotateTransform Angle="0"/>
                             </TransformGroup>
                         </Image.LayoutTransform>
                         <Image.RenderTransform>
                             <TransformGroup>
-                                <ScaleTransform ScaleX="1"/>
-                                <TranslateTransform X="-1000"/>
+                                <ScaleTransform ScaleY="1"/>
+                                <TranslateTransform Y="1000"/>
+                                <RotateTransform Angle="90"/>
                             </TransformGroup>
                         </Image.RenderTransform>
                     </Image>
-                    <Image x:Name="player1_Right" Margin="0,10,0,0" Grid.Row="2" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[1].Hand[1].ActiveURL}" RenderTransformOrigin="0.5,0.5">
+                    <Image x:Name="player1_Right" Width="{Binding CardWidth, Mode=OneWay}" Margin="0,-10,0,0" Grid.Row="2" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[1].Hand[1].ActiveURL}" RenderTransformOrigin="0.5,0.5">
                         <Image.LayoutTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
                                 <SkewTransform/>
-                                <RotateTransform Angle="90"/>
+                                <RotateTransform Angle="0"/>
                             </TransformGroup>
                         </Image.LayoutTransform>
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform ScaleX="1"/>
-                                <TranslateTransform X="-1000"/>
+                                <TranslateTransform Y="1000"/>
+                                <RotateTransform Angle="90"/>
                             </TransformGroup>
                         </Image.RenderTransform>
                     </Image>
@@ -260,33 +264,35 @@
                         <ColumnDefinition Width="1.5*"/>
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
-                    <Image x:Name="player3_Right" Margin="0,0,0,10" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[3].Hand[1].ActiveURL}" RenderTransformOrigin="0.5,0.5">
+                    <Image x:Name="player3_Right" Width="{Binding CardWidth, Mode=OneWay}" Margin="0,0,0,-10" Grid.Row="1" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[3].Hand[1].ActiveURL}" RenderTransformOrigin="0.5,0.5">
                         <Image.LayoutTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
                                 <SkewTransform/>
-                                <RotateTransform Angle="90"/>
+                                <RotateTransform Angle="0"/>
                             </TransformGroup>
                         </Image.LayoutTransform>
                         <Image.RenderTransform>
                             <TransformGroup>
-                                <ScaleTransform ScaleX="1"/>
-                                <TranslateTransform X="-1000"/>
+                                <ScaleTransform ScaleY="1"/>
+                                <TranslateTransform Y="1000"/>
+                                <RotateTransform Angle="90"/>
                             </TransformGroup>
                         </Image.RenderTransform>
                     </Image>
-                    <Image x:Name="player3_Left" Margin="0,10,0,0" Grid.Row="2" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[3].Hand[0].ActiveURL}" RenderTransformOrigin="0.5,0.5">
+                    <Image x:Name="player3_Left" Width="{Binding CardWidth, Mode=OneWay}" Margin="0,-10,0,0" Grid.Row="2" Grid.Column="0" VerticalAlignment="Top" Source="{Binding Game.Players[3].Hand[0].ActiveURL}" RenderTransformOrigin="0.5,0.5">
                         <Image.LayoutTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
                                 <SkewTransform/>
-                                <RotateTransform Angle="90"/>
+                                <RotateTransform Angle="0"/>
                             </TransformGroup>
                         </Image.LayoutTransform>
                         <Image.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform ScaleX="1"/>
-                                <TranslateTransform X="-1000"/>
+                                <TranslateTransform Y="1000"/>
+                                <RotateTransform Angle="90"/>
                             </TransformGroup>
                         </Image.RenderTransform>
                     </Image>
@@ -376,6 +382,7 @@
             <Button Content="TurnPCcards" HorizontalAlignment="Left" Margin="494,449,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_6"/>
             <Button Content="Flop"        HorizontalAlignment="Left" Margin="494,389,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_7"/>
             <Button Content="CalculateHand"        HorizontalAlignment="Left" Margin="494,330,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_8"/>
+            <Button Content="Eerste inzetronde" HorizontalAlignment="Left" Margin="494,311,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_9"/>
         </Grid>
     </Grid>
 
@@ -538,13 +545,13 @@
                 BeginTime="0:0:0.25"
                 Duration="0:0:0.5"
                 To="0" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player1_Left" />
             <DoubleAnimation
                 BeginTime="0:0:1.25"
                 Duration="0:0:0.5"
                 To="0" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player1_Right" />
         </Storyboard>
 
@@ -570,13 +577,13 @@
                 BeginTime="0:0:0.75"
                 Duration="0:0:0.5"
                 To="0" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player3_Left" />
             <DoubleAnimation
                 BeginTime="0:0:1.75"
                 Duration="0:0:0.5"
                 To="0" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player3_Right" />
         </Storyboard>
 
@@ -601,14 +608,14 @@
             <DoubleAnimation
                 BeginTime="0:0:0"
                 Duration="0:0:1"
-                To="-1000" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                To="1000" 
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player1_Left" />
             <DoubleAnimation
                 BeginTime="0:0:0"
                 Duration="0:0:1"
-                To="-1000" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                To="1000" 
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player1_Right" />
         </Storyboard>
 
@@ -633,14 +640,14 @@
             <DoubleAnimation
                 BeginTime="0:0:0"
                 Duration="0:0:1"
-                To="-1000" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                To="1000" 
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player3_Left" />
             <DoubleAnimation
                 BeginTime="0:0:0"
                 Duration="0:0:1"
-                To="-1000" 
-                Storyboard.TargetProperty="RenderTransform.Children[1].X"
+                To="1000" 
+                Storyboard.TargetProperty="RenderTransform.Children[1].Y"
                 Storyboard.TargetName="player3_Right" />
         </Storyboard>
 
@@ -700,7 +707,7 @@
         <Storyboard x:Key="sbPlayer1">
             <DoubleAnimationUsingKeyFrames
                 BeginTime="0:0:0"
-                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX"
+                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY"
                 Storyboard.TargetName="player1_Left">
                 <LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="0"/>
                 <LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
@@ -708,7 +715,7 @@
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames
                 BeginTime="0:0:0"
-                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX"
+                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY"
                 Storyboard.TargetName="player1_Right">
                 <LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="0"/>
                 <LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
@@ -740,7 +747,7 @@
         <Storyboard x:Key="sbPlayer3">
             <DoubleAnimationUsingKeyFrames
                 BeginTime="0:0:0"
-                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX"
+                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY"
                 Storyboard.TargetName="player3_Left">
                 <LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="0"/>
                 <LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
@@ -748,7 +755,7 @@
             </DoubleAnimationUsingKeyFrames>
             <DoubleAnimationUsingKeyFrames
                 BeginTime="0:0:0"
-                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleX"
+                Storyboard.TargetProperty="RenderTransform.Children[0].ScaleY"
                 Storyboard.TargetName="player3_Right">
                 <LinearDoubleKeyFrame KeyTime="0:0:0.25" Value="0"/>
                 <LinearDoubleKeyFrame KeyTime="0:0:0.35" Value="0"/>
