--- a/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
@@ -68,6 +68,16 @@
 
                     <TextBlock Background="Black" Grid.Column="3" Grid.RowSpan="6"></TextBlock>
                     <TextBlock Background="Black" Grid.Column="5" Grid.RowSpan="6"></TextBlock>
+
+                    <Button BorderThickness="0"  Background="Transparent" Click="BtnStart_Click" Style="{DynamicResource Buttonstyleinzet}" Grid.Column="7" Grid.ColumnSpan="4" Grid.Row="1" Grid.RowSpan="5" HorizontalAlignment="Left" VerticalAlignment="Center" Width="280" Height="280">
+                        <Image x:Name="imgLever" Source="/Img/Slotmachine/Lever.png" RenderTransformOrigin="0.065,0.800">
+                            <Image.RenderTransform>
+                                <RotateTransform Angle="0"/>
+                            </Image.RenderTransform>
+                        </Image>
+                    </Button>
+
+                    <Image Source="/Img/Slotmachine/Bal.png" Grid.Column="7" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="3" Width="50" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Left"></Image>
                 </Grid>
                 <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.ColumnDefinitions>
@@ -81,7 +91,7 @@
                         <RowDefinition Height="1*"></RowDefinition>
                         <RowDefinition Height="1*"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <Button Click="Help_Click" Background="Black" Grid.Column="1" Height="60px" Width="60" Foreground="White" FontSize="30" HorizontalAlignment="Right"> ?
+                    <Button Click="Help_Click" Background="Black" Grid.Column="1" Height="60px" Width="60" Foreground="White" FontSize="30" HorizontalAlignment="Right">?
                         <Button.Resources>
                             <Style TargetType="Border">
                                 <Setter Property="CornerRadius" Value="200"></Setter>
