--- a/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
+++ b/StonksCasino/StonksCasino/Views/slotmachine/SlotmachineWindow.xaml
@@ -42,34 +42,45 @@
                 </Grid.RowDefinitions>
                 <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
                         <ColumnDefinition Width="1*"></ColumnDefinition>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
                         <ColumnDefinition Width="1*"></ColumnDefinition>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
                         <ColumnDefinition Width="1*"></ColumnDefinition>
-                        <ColumnDefinition Width="10"></ColumnDefinition>
                         <ColumnDefinition Width="1*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="10"></RowDefinition>
                         <RowDefinition Height="1*"></RowDefinition>
-                        <RowDefinition Height="10"></RowDefinition>
                         <RowDefinition Height="1*"></RowDefinition>
-                        <RowDefinition Height="10"></RowDefinition>
                         <RowDefinition Height="1*"></RowDefinition>
-                        <RowDefinition Height="10"></RowDefinition>
                     </Grid.RowDefinitions>
-                    <TextBlock Background="Black" Grid.ColumnSpan="7" Grid.Column="1"></TextBlock>
-                    <TextBlock Background="Black" Grid.ColumnSpan="7" Grid.Row="7" Grid.Column="1"></TextBlock>
-                    <TextBlock Background="Black" Grid.RowSpan="7" Grid.Column="1"></TextBlock>
-                    <TextBlock Background="Black" Grid.RowSpan="7" Grid.Column="7"></TextBlock>
+                    <Border Grid.Row="0" Grid.Column="0" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[0].Slots[0].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="1" Grid.Column="0" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[0].Slots[1].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="2" Grid.Column="0" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[0].Slots[2].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="0" Grid.Column="1" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[1].Slots[0].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="1" Grid.Column="1" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[1].Slots[1].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="2" Grid.Column="1" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[1].Slots[2].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="0" Grid.Column="2" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[2].Slots[0].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="1" Grid.Column="2" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[2].Slots[1].ImageURL}"/>
+                    </Border>
+                    <Border Grid.Row="2" Grid.Column="2" BorderBrush="Black" BorderThickness="7">
+                        <Image Source="{Binding Slotmachine.SlotRows[2].Slots[2].ImageURL}"/>
+                    </Border>
 
-                    <TextBlock Background="Black" Grid.Column="3" Grid.RowSpan="6"></TextBlock>
-                    <TextBlock Background="Black" Grid.Column="5" Grid.RowSpan="6"></TextBlock>
-
-                    <Button BorderThickness="0"  Background="Transparent" Click="BtnStart_Click" Style="{DynamicResource Buttonstyleinzet}" Grid.Column="7" Grid.ColumnSpan="4" Grid.Row="1" Grid.RowSpan="5" HorizontalAlignment="Left" VerticalAlignment="Center" Width="280" Height="280">
+                    <Button IsEnabled="{Binding AllowedToPull}" BorderThickness="0"  Background="Transparent" Click="BtnStart_Click" Style="{DynamicResource Buttonstyleinzet}" Grid.Column="3"  Grid.Row="1" >
                         <Image x:Name="imgLever" Source="/Img/Slotmachine/Lever.png" RenderTransformOrigin="0.065,0.800">
                             <Image.RenderTransform>
                                 <RotateTransform Angle="0"/>
@@ -77,7 +88,7 @@
                         </Image>
                     </Button>
 
-                    <Image Source="/Img/Slotmachine/Bal.png" Grid.Column="7" Grid.Row="2" Grid.ColumnSpan="2" Grid.RowSpan="3" Width="50" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Left"></Image>
+                    <Image Source="/Img/Slotmachine/Bal.png" Grid.Column="4" Grid.Row="1"  Width="50" Height="50" VerticalAlignment="Bottom" HorizontalAlignment="Left"></Image>
                 </Grid>
                 <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.ColumnDefinitions>
@@ -98,10 +109,10 @@
                             </Style>
                         </Button.Resources>
                     </Button>
-                    <Button x:Name="btVerhogen" Click="Verhogen_Click" Background="Black" Grid.Column="1" Grid.Row="1" Height="60px" Foreground="White">
+                    <Button  Click="Verhogen_Click" IsEnabled="{Binding AllowedToClickVH}" Background="Black" Grid.Column="1" Grid.Row="1" Height="60px" Foreground="White">
                         <TextBlock TextAlignment="Center">Beurten verhogen<LineBreak/>- 100 fiches</TextBlock>
                     </Button>
-                    <Button x:Name="btVerlagen" Click="Verlagen_Click" Background="Black" Grid.Column="1" Grid.Row="2" Height="60px" Foreground="White">
+                    <Button Click="Verlagen_Click" IsEnabled="{Binding AllowedToClickVL}" Background="Black" Grid.Column="1" Grid.Row="2" Height="60px" Foreground="White">
                         <TextBlock TextAlignment="Center">Beurten verlagen<LineBreak/>+ 100 fiches</TextBlock>
                     </Button>
                     <Grid Grid.Row="3" Grid.Column="1" Background="Black">
