--- a/StonksCasino/StonksCasino/Views/horserace/horseracewindow.xaml
+++ b/StonksCasino/StonksCasino/Views/horserace/horseracewindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StonksCasino.Views.horserace"
         mc:Ignorable="d"
-        Title="horseracewindow" Height="450" Width="800" WindowState="Maximized" ResizeMode="CanResize"
+        Title="horseracewindow" Height="450" Width="800" WindowState="Maximized" Closing="Window_Closing" ResizeMode="CanResize"
         xmlns:gif ="https://github.com/XamlAnimatedGif/XamlAnimatedGif">
     <Grid>
         <Grid.RowDefinitions>
